--- a/Visualization_project_Data_Cleaning.ipynb
+++ b/Visualization_project_Data_Cleaning.ipynb
@@ -107,6 +107,15 @@
         "        \"THE KICKSTARTER - 10,000₪ (Legacy)\": \"The KICKSTARTER\"\n",
         "    })\n",
         "\n",
+        "# Function to clean up trailing or leading commas in the Industry column\n",
+        "def clean_industry_values(industry_value):\n",
+        "    if isinstance(industry_value, str):  # Ensure the value is a string before processing\n",
+        "        return industry_value.strip().strip(',')\n",
+        "    return industry_value\n",
+        "\n",
+        "# Apply the cleaning function to the Industry column\n",
+        "startup_df['Industry'] = startup_df['Industry'].apply(clean_industry_values)\n",
+        "\n",
         "# ========================================\n",
         "# Clean Deal Table\n",
         "# ========================================\n",
@@ -181,9 +190,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "54fbd8c7-6f55-48d1-ebc9-be20278200dd"
+        "outputId": "361c544a-4592-436f-9275-f03b30ee5e0f"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
